# QuantumDeepField_molecule

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: black_formatter.yml  docs_pages.yml
_sources/usage/: installation.md.txt  modules.rst.txt
docs/: Makefile  conf.py  index.rst
docs/usage/: usage.md
qdf/: datasets.py  definitions.py  hyperparameters.py  models.py  preprocess.py  settings.py  wrappers.py
scripts/: predict.py  preprocess_predict.py  preprocess_train.py  train.py
usage/: installation.html  modules.html  usage.html
