[tool.poetry]
name = "quantumdeepfield-molecule"
version = "0.1.0"
description = "Machine Learning model for predicting molecular properties."
authors = [""]
license = "MIT"
readme = "README.md"
packages = [{include = "quantumdeepfield_molecule"}]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
idna = "3.4"
numpy = "1.23.3"
pillow = "9.2.0"
requests = "2.28.1"
scipy = "1.9.1"
torch = "1.12.1"
torchaudio = "0.12.1"
typing-extensions = "4.3.0"
urllib3 = "1.26.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
